--- a/apps/pingora-proxy/Cargo.toml
+++ b/apps/pingora-proxy/Cargo.toml
@@ -15,3 +15,11 @@ tokio = { version = "1", features = ["sync"] }
 thiserror = "1.0"
 tracing = "0.1"
 tracing-subscriber = "0.3"
+config = { version = "0.14", features = ["yaml"] }
+env_logger = "0.11"
+log = "0.4"
+once_cell = "1.19"
+parking_lot = "0.12"
+prometheus = { version = "0.13", features = ["process"] }
+anyhow = "1.0"
+
