--- a/apps/kline-service/wasm-cal/Cargo.toml
+++ b/apps/kline-service/wasm-cal/Cargo.toml
@@ -25,6 +25,9 @@ anyhow = "1.0.97"
 thiserror = "2.0.12"
 console_error_panic_hook = "0.1.7"
 chrono = "0.4.40"
+ordered-float = "5.0.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.39"
