--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -15,13 +15,14 @@
     "db:studio": "prisma studio"
   },
   "dependencies": {
-    "@prisma/client": "^6.11.1",
-    "dotenv": "^16.4.5",
-    "mysql2": "^3.14.2",
-    "prisma": "^6.11.1"
+    "@prisma/client": "^6.12.0",
+    "bcrypt": "^6.0.0",
+    "dotenv": "^17.2.0",
+    "mysql2": "^3.14.2"
   },
   "devDependencies": {
     "@repo/prettier-config": "workspace:*",
+    "prisma": "^6.12.0",
     "tsx": "^4.20.3"
   },
   "prettier": "@repo/prettier-config"
