--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "db:studio": "turbo db:studio",
     "db:seed": "turbo db:seed",
     "prisma:migrate": "turbo prisma:migrate",
-    "oauth:setup": "node scripts/setup-oauth-system.js",
-    "admin:setup": "node scripts/setup-admin-portal-client.js",
-    "user:admin": "node scripts/create-admin-user.js",
+    "oauth:setup": "pnpm db:seed",
     "e2e": "turbo e2e",
     "e2e:ui": "turbo e2e:ui",
     "e2e:report": "turbo e2e:report",
