--- a/apps/kline-service/wasm-cal/Cargo.toml
+++ b/apps/kline-service/wasm-cal/Cargo.toml
@@ -19,6 +19,7 @@ web-sys = { version = "0.3.77", features = [
   "MouseEvent",
   "WheelEvent",
   "TextMetrics",
+  "Performance",
   "Window"
 ]}
 js-sys = "0.3.77"
@@ -28,7 +29,7 @@ lazy_static = "1.5.0"
 anyhow = "1.0.97"
 thiserror = "2.0.12"
 console_error_panic_hook = "0.1.7"
-chrono = "0.4.40"
+chrono = { version = "0.4.40" }
 ordered-float = "5.0.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
