--- a/apps/oauth-service/package.json
+++ b/apps/oauth-service/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "jose": "^6.0.11",
+    "lru-cache": "^10.2.0",
     "next": "^15.3.2",
     "path-to-regexp": "^8.2.0",
     "react": "^19.1.0",
