--- a/apps/admin-portal/package.json
+++ b/apps/admin-portal/package.json
@@ -35,7 +35,9 @@
     "recharts": "^3.0.2",
     "sonner": "^1.5.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.4"
+    "web-vitals": "^5.1.0",
+    "zod": "^3.24.4",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.28.0",
@@ -55,12 +57,14 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.19.1",
     "@types/react": "^19.1.6",
     "babel-jest": "^30.0.5",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
+    "jest": "^30.0.0",
     "jest-environment-jsdom": "^30.0.2",
     "jsonwebtoken": "^9.0.2",
     "postcss": "^8.5.3",
