--- a/apps/kline-service/wasm-cal/Cargo.toml
+++ b/apps/kline-service/wasm-cal/Cargo.toml
@@ -34,6 +34,7 @@ ordered-float = "5.0.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.141"
 serde-wasm-bindgen = "0.6"
+web-time = "1.1"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.39"
