--- a/apps/oauth-service-rust/Cargo.toml
+++ b/apps/oauth-service-rust/Cargo.toml
@@ -14,6 +14,7 @@ bcrypt = "0.15"
 chrono = { version = "0.4", features = ["serde"] }
 dotenvy = "0.15"
 jsonwebtoken = "9"
+lazy_static = "1.4"
 rand = "0.8"
 sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "mysql", "chrono", "uuid", "json"] }
 serde = { version = "1.0", features = ["derive"] }
